2012-10-05  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.17.0-rc3 Released.

	* Fix a regression from direct media ACLs where the directrtpsetup
	  option no longer works.

	  A check was added for direct media ACLs that immediately forced
	  remote bridging if there was no bridged channel.  This caused
	  directrtpsetup to no longer function as it needs this information
	  before bridging actually occurs.

	  Logic has now been adjusted so if there is no bridged channel a
	  remote bridge will still be attempted.

	  (closes issue ASTERISK-20511)
	  Reported by: kristoff
	  Tested by: kristoff

	  Review: https://reviewboard.asterisk.org/r/2146

2012-10-03  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.17.0-rc2 Released.

	* Fix an issue where Local channels dialed by app_queue are considered
	  in use immediately.

	  The chan_local channel driver returns a device state of in use even
	  if a created Local channel has not yet been dialed.  This fix
	  changes the logic to return a state of not in use until the channel
	  itself has been dialed.

	  (closes issue ASTERISK-20390)
	  Reported by: time_ringenbach

	* Fix a regression where direct media was not permitted for calls
	  using SIP INFO DTMF

	  A change was committed to fix direct media ACL support.  This change
	  wrongly assumed that only a single channel technology structure
	  exists for chan_sip.  This is in fact false as a second exists for
	  calls using SIP INFO DTMF.  The code which performs direct media ACL
	  checking now checks for both the non-INFO DTMF and INFO DTMF channel
	  technology structures.

	  (closes issue ASTERISK-20409)
	  Reported by: michele ciciotti privatewave

2012-09-13  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.17.0-rc1 Released.

2012-09-12 15:42 +0000 [r372959]  Matthew Jordan <mjordan@digium.com>

	* main/astobj2.c, include/asterisk/astobj2.h: Constify